--- a/.github/workflows/update-calendar.yml
+++ b/.github/workflows/update-calendar.yml
@@ -38,3 +38,9 @@ jobs:
           run: |
             python -m pip install --upgrade pip
             pip install -r requirements.txt
+
+            - name: Instalar dependencias
+  run: |
+    python -m pip install --upgrade pip
+    pip install -r requirements.txt
+
