--- a/.github/workflows/update-calendar.yml
+++ b/.github/workflows/update-calendar.yml
@@ -1,46 +1,30 @@
-name: Actualitza AgendaCulturalBCN
+name: Actualiza calendario cultural BCN
 
 on:
-  schedule:
-    # Cada dia a les 06:30 UTC (canvia si vols). Cron: minut hora dia-mes dia-setmana
-    - cron: '30 6 * * *'
-  workflow_dispatch: {}
+  push:
+    branches:
+      - main
 
 jobs:
-  build:
+  generate_ics:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
+      - name: Checkout código
+        uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
+      - name: Instalar dependencias
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run script (genera .ics)
-        run: |
-          python agenda_cultural_bcn.py
+      - name: Generar archivo .ics
+        run: python generate_ics.py
 
-      - name: Commit and push ICS
+      - name: Subir archivo .ics
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add AgendaCulturalBCN.ics || true
-          git commit -m "Actualització automàtica AgendaCulturalBCN" || echo "No changes to commit"
-          git push origin HEAD:${{ github.ref_name }}
-      - name: Instalar dependencias
-          run: |
-            python -m pip install --upgrade pip
-            pip install -r requirements.txt
-
-            - name: Instalar dependencias
-  run: |
-    python -m pip install --upgrade pip
-    pip install -r requirements.txt
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+          git add agenda-cultural-bcn.ics
+          git commit -m 'Actualizar calendario'
+          git push
 
