--- a/.github/workflows/update-calendar.yml
+++ b/.github/workflows/update-calendar.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:  # permite ejecutarlo manualmente
 
 jobs:
   generate_ics:
@@ -22,9 +23,12 @@ jobs:
 
       - name: Subir archivo .ics
         run: |
-          git config --global user.name 'GitHub Actions'
-          git config --global user.email 'actions@github.com'
-          git add agenda-cultural-bcn.ics
-          git commit -m 'Actualizar calendario'
-          git push
-
+          if [ -f "agenda-cultural-bcn.ics" ]; then
+            git config --global user.name 'GitHub Actions'
+            git config --global user.email 'actions@github.com'
+            git add agenda-cultural-bcn.ics
+            git commit -m 'Actualizar calendario' || echo "Sin cambios"
+            git push
+          else
+            echo "❌ No se ha generado ningún archivo .ics"
+          fi
