--- a/.github/workflows/update-calendar.yml
+++ b/.github/workflows/update-calendar.yml
@@ -1,32 +1,22 @@
-name: Actualiza calendario cultural BCN
+name: Actualizar calendario
 
 on:
   schedule:
-    - cron: '0 6 * * *'  # se ejecuta cada día a las 6:00
-  workflow_dispatch:     # permite ejecutarlo manualmente
+    - cron: '0 7 * * *'  # se ejecuta todos los días a las 07:00 UTC
+  workflow_dispatch:
 
 jobs:
   generate_ics:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout código
-        uses: actions/checkout@v3
-
-      - name: Instalar dependencias
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Generar archivo .ics
+      - uses: actions/checkout@v3
+      - name: Configurar Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+      - name: Instalar librerías
+        run: pip install ics
+      - name: Generar calendario
         run: python generate_ics.py
-
-      - name: Subir archivo .ics
-        run: |
-          if [ -f "agenda-cultural-bcn.ics" ]; then
-            git config --global user.name 'GitHub Actions'
-            git config --global user.email 'actions@github.com'
-            git add agenda-cultural-bcn.ics
-            git commit -m 'Actualizar calendario' || echo "Sin cambios"
-            git push
-          else
-            echo "❌ No se ha generado ningún archivo .ics"
+      - name: Subir .ics a GitHub Pages
+        run: mv agenda-renoir.ics ./  # tu repo ya debe estar configurado con GitHub Pages
